--- a/inst/css/blog.css
+++ b/inst/css/blog.css
@@ -1,3 +1,4 @@
+/*
 div#quarto-content {
   display: block;
   width: 75%;
@@ -14,5 +15,13 @@ main {
     grid-template-columns: 1fr 5fr;
     gap: 30px;
     margin-top: 100px;
+    max-width: 100vw !important;
 }
 
+
+@media only screen and (max-width: 600px) {
+  .blog-page {
+    display: block !important;
+  }
+}
+*/
